[package]
name = "kvm-bindings"
version = "0.7.0"
authors = ["Amazon firecracker team <firecracker-devel@amazon.com>"]
description = "Rust FFI bindings to KVM generated using bindgen."
repository = "https://github.com/rust-vmm/kvm-bindings"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[dependencies]
serde-big-array = "0.5.1"
versionize = "0.2.0"
versionize_derive = "0.1.6"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.vmm-sys-util]
version = "0.12.1"
features = ["with-serde"]
optional = true

[features]
fam-wrappers = ["vmm-sys-util"]
